--- a/documents/whiteboard.Rmd
+++ b/documents/whiteboard.Rmd
@@ -257,27 +257,52 @@ plotter <- function(data,
                     fill = NA,
                     facet = NA,
                     scales = "free_y") {
-  
-  if (is.na(facet)){
+  if (is.na(facet)) {
     data$facet <-  ""
     facet <- "facet"
   }
   
   
-  if (!is.na(x) & !is.na(y)){
-    data %>% 
-    ggplot(aes(x = .data[[x]], y = .data[[y]])) + 
-    geom_point() + 
-    facet_wrap(vars(.data[[facet]]), scales = scales)
+  if (!is.na(x) & !is.na(y)) {
+    if (!is.na(fill)) {
+      data %>%
+        ggplot(aes(
+          x = .data[[x]],
+          y = .data[[y]],
+          fill = .data[[fill]]
+        )) +
+        geom_point(shape = 21, size = 4) +
+        facet_wrap(vars(.data[[facet]]), scales = scales)
+      
+    } else {
+      data %>%
+        ggplot(aes(
+          x = .data[[x]],
+          y = .data[[y]])) +
+        geom_point(shape = 21, size = 4) +
+        facet_wrap(vars(.data[[facet]]), scales = scales)
+      
+    }
+    
+    
     
   } else {
-  data %>% 
-    ggplot(aes(x = .data[[x]])) + 
-    geom_histogram() + 
-    facet_wrap(vars(.data[[facet]]), scales = scales)
+    if (!is.na(fill)) {
+      data %>%
+        ggplot(aes(x = .data[[x]], fill = .data[[fill]])) +
+        geom_histogram() +
+        facet_wrap(vars(.data[[facet]]), scales = scales)
+    } else  {
+      data %>%
+        ggplot(aes(x = .data[[x]])) +
+        geom_histogram() +
+        facet_wrap(vars(.data[[facet]]), scales = scales)
+      
+      
+    }
   }
 }
 
-plotter(b, x = "mes",y = "n", scales = "free")
+plotter(b, x = "mes",y = "n", scales = "free", fill = "mes")
 ```
 
