--- a/documents/whiteboard.Rmd
+++ b/documents/whiteboard.Rmd
@@ -306,3 +306,31 @@ plotter <- function(data,
 plotter(b, x = "mes",y = "n", scales = "free", fill = "mes")
 ```
 
+# notes with call
+
+add in option for specifying what should be numeric 
+
+add in tallies for missing data
+add checkbox for download long / wide
+
+units / factoring
+
+balance
+
+gear
+
+instead of modify, diagnostics 
+
+2 way dat with filtering 
+
+make NAs explicit
+
+# last few things
+
+add in upload feature
+
+add download feature to each table
+
+Move plotting up to the raw data section
+
+write bullet for what the app currently does and what comes next
